Mon Mar 10 22:27:09 UTC 2008  Nanbor Wang  <nanbor@wakefield.txcorp.com>

        * ace/Svc_Conf.h: Removed redundant inclusion of Obstack.h.  It is
          included later in Svc_Conf_Param.h.  Removing this extra
          inclusion allows us to build on MacOS Leopard with optimization
          enabled.

Mon Mar 10 15:35:02 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Log_Msg.{h cpp} (log): For %C, clearly note that it always prints
          a narrow-char string, and adjust the va_arg to match. Thanks to
          Russell Morra for reporting this issue.

Mon Mar 10 13:20:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Multicast_Test.cpp:
          When sending fails, print the ip address we are using in the error
          message.

Sat Mar  8 16:23:57 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/WIN32_Asynch_IO.cpp (send): Enhanced the code to allow sends
          of 0-sized datagrams.  Thanks to Andi Heusser <aheusser at gmail
          dot com> for this fix.

Thu Mar  6 16:49:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/rules.lib.GNU:
          Rearranged some rules to make sure c/C files are compiled with the
          C compiler on OpenVMS

Thu Mar  6 13:10:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_openvms.GNU:
          Improved this file

Thu Mar  6 10:33:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_openvms.GNU:
          Removed restriction that only a shared or static build can be done

Wed Mar  5 07:54:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Don't run the parallel connect strategy test on VxWorks 5.5, the
          command length of the shell is not long enough.

Tue Mar  4 09:27:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ProcessVX.pm: